--- a/clustering-backend/requirements.txt
+++ b/clustering-backend/requirements.txt
@@ -14,6 +14,7 @@ dotenv==0.9.9
 Flask==3.1.0
 fonttools==4.57.0
 frozenlist==1.6.0
+greenlet==3.2.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -29,6 +30,7 @@ pandas==2.2.3
 pillow==11.2.1
 plotly==6.0.1
 propcache==0.3.1
+psycopg2-binary==2.9.10
 pycryptodome==3.22.0
 pymongo==4.12.1
 pyparsing==3.2.3
@@ -42,9 +44,11 @@ scikit-learn==1.6.1
 scipy==1.15.3
 seaborn==0.13.2
 six==1.17.0
+SQLAlchemy==2.0.40
 ta==0.11.0
 threadpoolctl==3.6.0
 tqdm==4.67.1
+typing_extensions==4.13.2
 tzdata==2025.2
 tzlocal==5.3.1
 urllib3==2.4.0
