--- a/clustering-backend/requirements.txt
+++ b/clustering-backend/requirements.txt
@@ -12,6 +12,7 @@ dateparser==1.2.1
 dnspython==2.7.0
 dotenv==0.9.9
 Flask==3.1.0
+flask-cors==5.0.1
 fonttools==4.57.0
 frozenlist==1.6.0
 greenlet==3.2.1
